--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "whatsapp-bot-ccr",
   "version": "1.0.0",
   "description": "BOT API to WhatsApp",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "start"
+    "start": "nodemon ./bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,8 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "twilio": "^3.46.0"
   }
 }
